--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tacogram</title>
-    <link rel="shortcut icon" href="/img/tacos.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/tacos.svg" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     
   </head>
   <body>
     <main>
       <nav>
-        <img src="/img/left-arrow.svg" alt="left arrow" />
+        <img src="img/left-arrow.svg" alt="left arrow" />
         <p>You</p>
-        <img src="/img/more.svg" alt="more" />
+        <img src="img/more.svg" alt="more" />
       </nav>
 
       <article>
@@ -45,20 +45,20 @@
  
         <p class="closeBtn">&#88;</p>
 
-        <img src="/img/carrousel.svg" alt="right arrow" class="carrousel carrousel-right" data-arrow="right">
-        <img src="/img/carrousel.svg" alt="left arrow" class="carrousel carrousel-left" data-arrow="left"/>
+        <img src="img/carrousel.svg" alt="right arrow" class="carrousel carrousel-right" data-arrow="right">
+        <img src="img/carrousel.svg" alt="left arrow" class="carrousel carrousel-left" data-arrow="left"/>
       </div>
     </main>
     <footer>
       <div class="icons">
-        <img src="/img/home.svg" alt="">
-        <img src="/img/loupe.svg" alt="">
-        <img src="/img/add.svg" alt="">
-        <img src="/img/like.svg" alt="">
-        <img src="/img/user.svg" alt="">
+        <img src="img/home.svg" alt="">
+        <img src="img/loupe.svg" alt="">
+        <img src="img/add.svg" alt="">
+        <img src="img/like.svg" alt="">
+        <img src="img/user.svg" alt="">
       </div>
     </footer>
     <div class="overlay"> </div>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
